# monkeypox

./: .gitignore  README.md  augment_mpox.py  evaluate_only.py  generate_synth.py  main.py  pyproject.toml  requirements.txt
metrics/: fid.py  ssim.py
mpox-sd15-lora/weights-sd15-mpox/checkpoint-1000/: pytorch_lora_weights.safetensors  random_states_0.pkl
mpox-sd15-lora/weights-sd15-mpox/checkpoint-2000/: pytorch_lora_weights.safetensors  random_states_0.pkl
mpox-sd15-lora/weights-sd15-mpox/checkpoint-3000/: pytorch_lora_weights.safetensors  random_states_0.pkl
mpox-sd15-lora/weights-sd15-mpox/checkpoint-4000/: pytorch_lora_weights.safetensors  random_states_0.pkl
sd_train/: train_dreambooth_lora.py
